--- a/tcc/tcc.tex
+++ b/tcc/tcc.tex
@@ -237,10 +237,12 @@ Informação da Universidade de Caxias do Sul, como requisito obrigatório para 
 % ELEMENTOS TEXTUAIS
 % ----------------------------------------------------------
 \textual
-\include{capitulos/introducao}
 \include{capitulos/capitulo1}
+\include{capitulos/capitulo2}
 \include{capitulos/capitulo3}
+\include{capitulos/capitulo4}
 \include{capitulos/capitulo5}
+\include{capitulos/capitulo6}
 
 % ----------------------------------------------------------
 % RESULTADOS
